# agent-navigator

./: .gitignore  LICENSE  MANIFEST.in  README.en.md  README.md  pyproject.toml
.github/workflows/: tests.yml
agent_navigator/: __init__.py  cli.py  commands.py  paths.py  templates.py
docs/: README.md  research-and-thought-process.en.md  research-and-thought-process.md
tests/: __init__.py  test_cli.py
